@@ -1,5 +1,10 @@
 2007-09-25  Jens Granseuer  <jensgr@gmx.net>
 
+	* theme-thumbnail.c: patch up an outdated comment about how the
+	thumbnailer protocol works
+
+2007-09-25  Jens Granseuer  <jensgr@gmx.net>
+
  	Prevent lots of thumbs from being created with the color scheme of the
 	currently active theme (see comment #15 in bug 460023). Maybe it also
 	helps with some of the other color-related issues.
